[gd_scene load_steps=26 format=3 uid="uid://d1f7eabgfc3gq"]

[ext_resource type="Script" uid="uid://crsa0bbhlxwqj" path="res://player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://dr5r1wgkhnxts" path="res://art/Capybara-walk_right.png" id="3_hqtel"]
[ext_resource type="AudioStream" uid="uid://b8swmsyq5de1y" path="res://art/sfx/pasos/stepdirt_1.wav" id="3_n7ghd"]
[ext_resource type="AudioStream" uid="uid://dt4dvjw6xlxbw" path="res://art/sfx/pasos/stepdirt_2.wav" id="4_nvl01"]
[ext_resource type="AudioStream" uid="uid://d1t7inb5hskqy" path="res://art/sfx/pasos/stepdirt_3.wav" id="5_ivps1"]
[ext_resource type="AudioStream" uid="uid://bpcrfv2ilmpro" path="res://art/sfx/pasos/stepdirt_4.wav" id="6_urp6f"]
[ext_resource type="AudioStream" uid="uid://uo0lbj1dqmqh" path="res://art/sfx/pasos/stepdirt_5.wav" id="7_bwjto"]
[ext_resource type="AudioStream" uid="uid://dq5ocbs0oauvg" path="res://art/sfx/pasos/stepdirt_6.wav" id="8_606se"]
[ext_resource type="AudioStream" uid="uid://cewhtmoyfahno" path="res://art/sfx/pasos/stepdirt_7.wav" id="9_u1c27"]
[ext_resource type="AudioStream" uid="uid://dv4uesakfhvbe" path="res://art/sfx/pasos/stepdirt_8.wav" id="10_op7ga"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_hqtel")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_hqtel")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("3_hqtel")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("3_hqtel")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("3_hqtel")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("3_hqtel")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("3_hqtel")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("3_hqtel")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("3_hqtel")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("3_hqtel")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b26j0"]
radius = 25.0
height = 62.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_n7ghd"]
streams_count = 8
stream_0/stream = ExtResource("3_n7ghd")
stream_1/stream = ExtResource("4_nvl01")
stream_2/stream = ExtResource("5_ivps1")
stream_3/stream = ExtResource("6_urp6f")
stream_4/stream = ExtResource("7_bwjto")
stream_5/stream = ExtResource("8_606se")
stream_6/stream = ExtResource("9_u1c27")
stream_7/stream = ExtResource("10_op7ga")

[node name="Player" type="Area2D"]
script = ExtResource("1_sweqy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b26j0")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_n7ghd")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
